--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>RT Messaging Bridge</title>
-  <script src="https://cdn.backendless.com/sdk/js/latest/backendless.min.js"></script>
+  <script src="https://unpkg.com/backendless"></script>
 </head>
 <body>
   <h2>Listening for messages...</h2>
